feat(hero): use model-viewer for KOTSU.glb, enlarge, disable zoom, base-aware src

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="AquaAeris — автономное устройство для генерации питьевой воды из воздуха. Экологично, эффективно, IoT. Чистая вода где угодно." />
   <meta name="author" content="AquaAeris" />
-  <link rel="canonical" href="https://aqua-aeris.lovable.app/" />
+  <link rel="canonical" href="" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,6 +29,8 @@
   <meta name="twitter:title" content="AquaAeris — вода из воздуха" />
   <meta name="twitter:description" content="Автономная генерация воды из воздуха. Чистота и свежесть в каждой капле." />
   <meta name="twitter:image" content="" />
+  <!-- 3D Model Viewer -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer@^3.5.0/dist/model-viewer.min.js"></script>
   <script>
     (function () {
       if (!location.hash) {
